# gemini-mcp-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: package.json
scripts/: install.ps1  install.sh
src/: error.rs  gemini.rs  lib.rs  main.rs  server.rs
